PIVOT-1032:  Fix the remaining LineLength errors, some AvoidNestedBlocks errors and many others in many of the smaller files touched here.
git-svn-id: https://svn.apache.org/repos/asf/pivot/trunk@1838293 13f79535-47bb-0310-9956-ffa450edef68